# mallard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/interface/: mod.rs
src/interface/messages/: mod.rs
src/telemetry/: mod.rs
src/world/: mod.rs
src/world/messages/: mod.rs
