[package]
name = "mallard"
version = "0.1.0"
authors = ["Simon Sellar <simon@ourbusyfamily.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sdl2 = { version = "0.34.0", features = ["bundled"] }